--- a/bootstrap-grids.html
+++ b/bootstrap-grids.html
@@ -26,10 +26,54 @@
   <body>
     <h1>Hello, world!</h1>
 
+    <nav class="navbar bg-info navbar-light navbar-expand-md">
+        <a href="#" class="navbar-brand">My Company</a>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" 
+                id="aboutDropdown"
+                data-bs-toggle="dropdown"
+                aria-expanded="false" href="#">About</a>
+
+                <div class="dropdown-menu" aria-labelledby="aboutDropdown">
+                    <a class="dropdown-item" href="#">Things</a>
+                    <a class="dropdown-item" href="#">Stuff</a>
+                    <a class="dropdown-item" href="#">More</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <form class="d-flex"> <!-- any form still needs the action (where the form is submitting to)
+            and the other is method (post or get - how the form submits) -->
+                <input class="form-control" type="text" placeholder="Search" />
+                <button type="submit" class="btn btn-dark">Dark</button>
+            </form>
+        </ul>
+    </nav>
+
+
     <main class="container-md">
         <div class="row">
             <div class="col-sm">COL 1</div>
-            <div class="col-sm-5">COL 2</div>
+            <div class="col-sm-5">
+                COL 2
+                <section class="row">
+                    <!-- this is a nested grid - a row inside a column -->
+                    <div class="col">nested 1</div>
+                    <div class="col">nested 2</div>
+                    <div class="col">nested 3</div>
+                </section>
+            </div>
             <div class="col-sm">COL 3</div>
         </div>
         <div class="row row-cols-3">
@@ -37,8 +81,8 @@
             is still responding to the 12-point grid -->
             <div class="col">COL 2</div>
             <div class="col">COL 3</div>
-            <div class="col-1">COL 4</div>
-            <div class="col">COL 5</div>
+            <div class="col-1 offset-4">COL 4</div>
+            <div class="col offset-2">COL 5</div>
         </div>
         <div class="row justify-content-center">
             <div class="col-4">COL 1</div>
