--- a/bootstrap-grids.html
+++ b/bootstrap-grids.html
@@ -12,7 +12,7 @@
         main{
             background-color: rgb(210,210,210);
             border:2px solid rgb(128,128,128);
-            height:600px;
+            height:1000px;
         }
 
         .row div{
@@ -26,7 +26,7 @@
   <body>
     <h1>Hello, world!</h1>
 
-    <nav class="navbar bg-info navbar-light navbar-expand-md">
+    <nav class="navbar bg-info navbar-light navbar-expand-md sticky-top">
         <a href="#" class="navbar-brand">My Company</a>
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
@@ -56,7 +56,7 @@
             <form class="d-flex"> <!-- any form still needs the action (where the form is submitting to)
             and the other is method (post or get - how the form submits) -->
                 <input class="form-control" type="text" placeholder="Search" />
-                <button type="submit" class="btn btn-dark">Dark</button>
+                <button type="submit" class="btn btn-dark ms-2">Dark</button>
             </form>
         </ul>
     </nav>
